// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders correctly 1`] = `
.c0 {
  display: inline-block;
  background: #fff;
  font-weight: 300;
  border: 1px solid #d7dde5;
  width: 16px;
  height: 16px;
  border-radius: 14px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all ease 300ms;
  transition: all ease 300ms;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  background: #fff;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 14px;
  -webkit-transition: all ease 300ms;
  transition: all ease 300ms;
}

.c0:checked {
  border: 1px solid #00aae6;
}

.c0:checked::after {
  background: #00aae6;
}

.c0:hover {
  background: #00aae60f;
  border: 1px solid #00aae6;
}

<input
  className="c0"
/>
`;

exports[`undefined renders correctly 1`] = `
.c0 {
  display: inline-block;
  background: #fff;
  font-weight: 300;
  border: 1px solid #fff;
  width: 16px;
  height: 16px;
  border-radius: 14px;
  cursor: pointer;
  position: relative;
  -webkit-transition: all ease 300ms;
  transition: all ease 300ms;
}

.c0::after {
  content: '';
  display: block;
  position: absolute;
  background: #fff;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  top: 2px;
  left: 2px;
  width: 10px;
  height: 10px;
  border-radius: 14px;
  -webkit-transition: all ease 300ms;
  transition: all ease 300ms;
}

.c0:checked {
  border: 1px solid #00aae6;
}

.c0:checked::after {
  background: #00aae6;
}

.c0:hover {
  border: 1px solid #00aae6;
}

.c1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 300;
  cursor: pointer;
  vertical-align: middle;
  color: #44494e;
  -webkit-transition: all ease 300ms;
  transition: all ease 300ms;
  line-height: 20px;
  margin: 0 20px 0 -14px;
  left: 24px;
  position: relative;
}

.c1:hover {
  color: #a0a3aa;
}

.c1:disabled {
  color: #c8ccd4;
  cursor: default;
}

<div>
  <input
    className="c0"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="c1"
  />
</div>
`;
